--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "connect-livereload": "^0.6.1",
+    "livereload": "^0.9.3"
   }
 }
