--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "mongodb": "4.1",
+    "mongodb": "^3.2.6",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
