--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "Andrew",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "mongodb": "^3.2.6",
+    "mongodb": "^3.7.4",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
